Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sudoku-service
  namespace: super-sudoku
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
  selector:
    app: super-sudoku
