Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sudoku-ingress
  namespace: super-sudoku
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: service-group
  labels:
    app: super-sudoku
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sudoku-service
                port:
                  number: 80
